--- a/src/styles/ChatsPanel.module.css
+++ b/src/styles/ChatsPanel.module.css
@@ -77,6 +77,7 @@
     overflow-y: auto;
     height: calc(100vh - 109px);
     max-height: calc(100vh - 109px);
+    max-width: 100%;
 }
 
 .chatTilesContainer::-webkit-scrollbar {
